tests/baselines/reference/parserMemberAccessorDeclaration13(target=es2015).errors.txt
parserMemberAccessorDeclaration13.ts(2,8): error TS1049: A 'set' accessor must have exactly one parameter.


==== parserMemberAccessorDeclaration13.ts (1 errors) ====
    class C {
       set Foo() { }
           ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
    }